--- a/src/Encryption.Host/Encryption.Host.csproj
+++ b/src/Encryption.Host/Encryption.Host.csproj
@@ -9,4 +9,9 @@
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.113" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Encryption.Contract\Encryption.Contract.csproj" />
+    <ProjectReference Include="..\Encryption\Encryption.csproj" />
+  </ItemGroup>
+
 </Project>
